--- a/Tabang-Hub/Tabang-Hub/Views/Organization/History.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/History.cshtml
@@ -1,105 +1,46 @@
-﻿@model Tabang_Hub.Utils.Lists
+﻿<!-- Include SweetAlert library -->
+<!-- Your existing HTML structure -->
 
-@{
-    ViewBag.Title = "History";
-    Layout = "~/Views/Shared/_Organization.cshtml";
-}
-
-<!-- Table head options start -->
 <section class="section">
     <div class="row" id="table-head">
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Table head options</h4>
+                    <h4 class="card-title">Event History</h4>
+                    <!-- Button to trigger manual history transfer -->
+                    <button type="button" class="btn btn-outline-primary float-right" onclick="confirmTransfer()">
+                        Transfer Events to History
+                    </button>
                 </div>
                 <div class="card-content">
                     <div class="card-body">
-                        <p>
-                            Similar to tables and dark tables, use the modifier classes <code class="highlighter-rouge">.thead-light</code> or <code class="highlighter-rouge">.thead-dark</code> to
-                            make <code class="highlighter-rouge">&lt;thead&gt;</code>s appear light or
-                            dark gray.
-                        </p>
+                        <p>Below is the list of events that have been moved to history.</p>
                     </div>
                     <!-- table head dark -->
                     <div class="table-responsive">
                         <table class="table mb-0">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th>NAME</th>
-                                    <th>RATE</th>
-                                    <th>SKILL</th>
-                                    <th>TYPE</th>
-                                    <th>LOCATION</th>
-                                    <th>ACTION</th>
+                                    <th>Event Name</th>
+                                    <th>Target Amount</th>
+                                    <th>Total Volunteers</th>
+                                    <th>Date Started</th>
+                                    <th>Date Ended</th>
+                                    <th>Location</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="text-bold-500">Michael Right</td>
-                                    <td>$15/hr</td>
-                                    <td class="text-bold-500">UI/UX</td>
-                                    <td>Remote</td>
-                                    <td>Austin,Taxes</td>
-                                    <td>
-                                        <a href="#">
-                                            <i class="badge-circle badge-circle-light-secondary font-medium-1"
-                                               data-feather="mail"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-bold-500">Morgan Vanblum</td>
-                                    <td>$13/hr</td>
-                                    <td class="text-bold-500">Graphic concepts</td>
-                                    <td>Remote</td>
-                                    <td>Shangai,China</td>
-                                    <td>
-                                        <a href="#">
-                                            <i class="badge-circle badge-circle-light-secondary font-medium-1"
-                                               data-feather="mail"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-bold-500">Tiffani Blogz</td>
-                                    <td>$15/hr</td>
-                                    <td class="text-bold-500">Animation</td>
-                                    <td>Remote</td>
-                                    <td>Austin,Texas</td>
-                                    <td>
-                                        <a href="#">
-                                            <i class="badge-circle badge-circle-light-secondary font-medium-1"
-                                               data-feather="mail"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-bold-500">Ashley Boul</td>
-                                    <td>$15/hr</td>
-                                    <td class="text-bold-500">Animation</td>
-                                    <td>Remote</td>
-                                    <td>Austin,Texas</td>
-                                    <td>
-                                        <a href="#">
-                                            <i class="badge-circle badge-circle-light-secondary font-medium-1"
-                                               data-feather="mail"></i>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-bold-500">Mikkey Mice</td>
-                                    <td>$15/hr</td>
-                                    <td class="text-bold-500">Animation</td>
-                                    <td>Remote</td>
-                                    <td>Austin,Texas</td>
-                                    <td>
-                                        <a href="#">
-                                            <i class="badge-circle badge-circle-light-secondary font-medium-1"
-                                               data-feather="mail"></i>
-                                        </a>
-                                    </td>
-                                </tr>
+                                @foreach (var history in Model.orgEventHistory)
+                                {
+                                    <tr>
+                                        <td>@history.eventTitle</td>
+                                        <td>@history.targetAmount</td>
+                                        <td>@history.maxVolunteer</td>
+                                        <td>@history.dateStart</td>
+                                        <td>@history.dateEnd</td>
+                                        <td>@history.location</td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -109,3 +50,54 @@
     </div>
 </section>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+    function confirmTransfer() {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "This will transfer all events to history.",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, transfer!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                transferToHistory();
+            }
+        });
+    }
+
+    function transferToHistory() {
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("TransferToHistory")',
+            success: function(response) {
+                if (response.success) {
+                    Swal.fire(
+                        'Transferred!',
+                        response.message,
+                        'success'
+                    ).then(() => {
+                        location.reload(); // Optionally, reload the page to update the event list
+                    });
+                } else {
+                    Swal.fire(
+                        'Error!',
+                        response.message,
+                        'error'
+                    );
+                }
+            },
+            error: function() {
+                Swal.fire(
+                    'Error!',
+                    'An unexpected error occurred.',
+                    'error'
+                );
+            }
+        });
+    }
+</script>
