--- a/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
@@ -36,10 +36,10 @@
                             }
                             <form action="#" method="post">
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Email Address</label>
+                                    <label for="username" class="form-label">Email or Username</label>
                                     <div class="input-group">
-                                        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your Email" required>
+                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Email or Username" required>
                                     </div>
                                 </div>
                                 <div class="mb-3">
@@ -66,4 +66,3 @@
         </div>
     </div>
 </div>
-<br />
