--- a/Tabang-Hub/Tabang-Hub/Views/Organization/VolunteerDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/VolunteerDetails.cshtml
@@ -83,7 +83,7 @@
                         @foreach (var UserSkill in Model.volunteersSkills)
                         {
                             <span class="badge badge-secondary skill-badge" data-skill-id="@UserSkill.skillId">
-                                @UserSkill.skillName
+                                @UserSkill.Skills.skillName
                             </span>
                         }
                     </div>
