--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -117,7 +117,7 @@
                                         </div>
                                         <div class="user-img d-flex align-items-center">
                                             <div class="avatar avatar-md">
-                                                <img src="@Url.Content(Model.profilePic.profilePath)">
+                                                <img src="@Url.Content(Model.OrgInfo.profilePath)">
                                             </div>
                                         </div>
                                     </div>
