--- a/Tabang-Hub/Tabang-Hub/Content/Css/message.css
+++ b/Tabang-Hub/Tabang-Hub/Content/Css/message.css
@@ -55,6 +55,14 @@
     height: 85vh;
 }
 
+.user-name {
+    font-size: 0.85em;
+    color: #ccc;
+    font-weight: bold;
+    margin-bottom: 3px; /* Adjust space between name and message */
+    padding-left: 8px; /* Optional padding */
+}
+
 .messages {
     padding: 10px;
     flex-grow: 1;
